tests/paczka1/fuzzy1/38075306.err
Error in line 5: jftOY S553 73,2
Error in line 9: jftOY A454 0,6
Error in line 14: jftOY A396 15,2
Error in line 17: qzzo1 A454 85,79
Error in line 22: qzzo1 A454 58,4
Error in line 31: Sk5 A396 88,4
Error in line 33: Sk5 A454 39,0
Error in line 18: XbJQnh59qeG A454 231,1
Error in line 34: Sk5 S473 26,1
